# ankivalenz

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  pyproject.toml  settings.ini
.cursor/rules/: test.mdc
.github/workflows/: test.yml
_proc/: 00_core.ipynb  ankivalenz-jvsc-479a3ad4-bb1c-45b3-8d56-4d9d30fa9c7bca56698e-85e3-4b89-a1d0-3c855e97c4fa.ipynb  ankivalenz.ipynb  html_parser.ipynb  index.ipynb  nbdev.yml  types.ipynb
_proc/_docs/: core.html  index.html  robots.txt  search.json  sitemap.xml
ankivalenz/: __init__.py  __main__.py  _modidx.py  anki_models.py  ankivalenz.py  generator.py  html_parser.py  main.py  markdown_parser.py  node_parser.py  types.py
ankivalenz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nbs/: ankivalenz.ipynb  html_parser.ipynb  index.ipynb  types.ipynb
nbs/.ipynb_checkpoints/: index-checkpoint.ipynb
rfc/: 001-parse-markdown.md
sample/Biology/: Cell.Rmd  Cell.html  Cell.md  Chemistry.Rmd  Chemistry.html  Chemistry.md  ankivalenz.json  math-delimeters.lua  strip-img-src.lua
sample/Biology/Animals/: Mouse.md
sample/Minimal/: Prokaryotes.md
sample/Notes/: Cell.html  Cell.md  ankivalenz.json
tests/: test_generator.py  test_html_parser.py  test_html_parser.py.disabled  test_markdown_parser.py  test_node_parser.py
